# glacier-welcome

./: CMakeLists.txt
data/: glacier-welcome.service
src/: CMakeLists.txt  main.cpp  welcome.cpp  welcome.h
src/qml/: glacier-welcome.qml  glacier-welcome.qrc
src/qml/components/: DeviceLockUI.qml  NumPadButton.qml  SayMeHello.qml
src/qml/pages/: SetPasswordPage.qml  SetupIsEndPage.qml  WelcomePage.qml
